--- a/boards/arm/akdk_bt1/akdk_bt1.dts
+++ b/boards/arm/akdk_bt1/akdk_bt1.dts
@@ -1,6 +1,6 @@
 /dts-v1/;
 #include <nordic/nrf52840_qiaa.dtsi>
-
+#include "akdk_bt1-pinctrl.dtsi"
 #include <dt-bindings/zmk/matrix_transform.h>
 
 
